Crash when i switch from edit mode to sculpt mode #57653

Closed
opened 2018-11-06 17:09:58 +01:00 by Francois Rimasson · 18 comments

System Information
Operating system and graphics card

Win 7
Quadro P2000

Blender Version
blender 2.80 alpha 2
hash b4dfe00fd6

Broken: (example: 2.69.7 4b206af, see splash screen)
Worked: (optional)

Short description of error

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

With the default cube
create blend shapes and edit vertices
using the pie menu, switch back and forth from edit to sculpt mode
Blender crash quickly wht i do many switch

**System Information** Operating system and graphics card Win 7 Quadro [P2000](https://archive.blender.org/developer/P2000.txt) **Blender Version** blender 2.80 alpha 2 hash b4dfe00fd60 Broken: (example: 2.69.7 4b206af, see splash screen) Worked: (optional) **Short description of error** **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps With the default cube create blend shapes and edit vertices using the pie menu, switch back and forth from edit to sculpt mode Blender crash quickly wht i do many switch

Added subscriber: @FrancoisRimasson

Added subscriber: @FrancoisRimasson
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Cannot reproduce here.

  • Does this also happen when you load File > Factory Settings?
  • Could you share your bledfile (so we are all on the same page)?
  • Does this also happen with the newset build from https://builder.blender.org/download?

Marking as incomplete until we have these tried...

Cannot reproduce here. - Does this also happen when you load `File` > `Factory Settings`? - Could you share your bledfile (so we are all on the same page)? - Does this also happen with the newset build from https://builder.blender.org/download? Marking as incomplete until we have these tried...

Added subscriber: @dskjal-1

Added subscriber: @dskjal-1

I could reproduce the crash.

System Information
Win10 RX460

Blender Version
Blender 2.80 alpha2 32dca36afb

Exact steps for others to reproduce the error

  1. Create shape key
  2. Set the value of shape key to 1
  3. Enter edit mode with pie menu
  4. Enter sculpt mode from edit mode with pie menu

This is a record.
shape-key-sculpt.gif

I could reproduce the crash. **System Information** Win10 RX460 **Blender Version** Blender 2.80 alpha2 32dca36afb1 **Exact steps for others to reproduce the error** 1. Create shape key 2. Set the value of shape key to 1 3. Enter edit mode with pie menu 4. Enter sculpt mode from edit mode with pie menu This is a record. ![shape-key-sculpt.gif](https://archive.blender.org/developer/F5430927/shape-key-sculpt.gif)
Member

Still cannot reproduce.
Is this still an issue with the latest buildbot build?

Still cannot reproduce. Is this still an issue with the latest buildbot build?

I could reproduce with latest( c94f806dc7 ) on Win10. But can not reproduce on Linux.

It also happens in the following way.

  1. Create shape key
  2. Set the value of shape key to 1
  3. Enter sculpt mode
  4. Hit tab many times
I could reproduce with latest( c94f806dc73 ) on Win10. But can not reproduce on Linux. It also happens in the following way. 1. Create shape key 2. Set the value of shape key to 1 3. Enter sculpt mode 4. Hit tab many times
Member

Someone here on windows that can debug this?

Someone here on windows that can debug this?

Added subscriber: @brhumphe

Added subscriber: @brhumphe

This comment was removed by @brhumphe

*This comment was removed by @brhumphe*

I was able to confirm this on windows 10 x64 2018-11-28 hash 4c6e7ef11f

I've narrowed it down somewhat. The crash is triggered by the transition from edit mode to sculpt mode if one of the following is true:

  • The object has only a base key, OR
  • The object has a base key and any shape key with a nonzerovalue.

Other things:

  • It doesn't matter if the edit -> sculpt transition is done by changing tabs, using the drop-down menu, or the radial menu: all will cause Blender to crash.
  • It is triggered only by directly changing from edit mode to sculpt mode. Going sculpt->edit->another mode ->sculpt works fine.
  • You can change the value of the key from within sculpt mode and sculpt as normal whatever the value of the key without crashing.
  • If you sculpt on a key that is at 0.0, any changes will be immediately discarded. However, changing the key value to 0.001 or higher and the changes will stick.
I was able to confirm this on windows 10 x64 2018-11-28 hash 4c6e7ef11f3 I've narrowed it down somewhat. The crash is triggered by the transition from edit mode to sculpt mode if one of the following is true: - The object has *only* a base key, OR - The object has a base key and any shape key with a *nonzero*value. Other things: - It doesn't matter if the edit -> sculpt transition is done by changing tabs, using the drop-down menu, or the radial menu: all will cause Blender to crash. - It is triggered only by directly changing from edit mode to sculpt mode. Going sculpt->edit->another mode ->sculpt works fine. - You can change the value of the key from within sculpt mode and sculpt as normal whatever the value of the key without crashing. - If you sculpt on a key that is at 0.0, any changes will be immediately discarded. However, changing the key value to 0.001 or higher and the changes will stick.

Related to this is #58075, which crashes under the same conditions (only one shape key, or one or more nonzero shape keys) when switching from edit mode to vertex paint mode.

Related to this is #58075, which crashes under the same conditions (only one shape key, or one or more nonzero shape keys) when switching from edit mode to vertex paint mode.
Member

Just a shot in the dark:
Does this also happen when blender is called from the commandline with the --threads 1 option?

Just a shot in the dark: Does this also happen when blender is called from the commandline with the `--threads 1` option?

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2018-11-29 10:00:32 +01:00

Could reproduce here with only one basis shape key.

Could reproduce here with only one basis shape key.

I can reproduce the bug on 27cccaeccd with --threads 1 option.

But It can not reproduce with --debug option. Then terminal displays following errors in edit mode.

Pass : Edit Mesh Face Overlay Pass, Uniform 'viewportSize' not found!
Pass : Edit Mesh Face Overlay Pass, Uniform 'edgeScale' not found!
Pass : Edit Mesh Face Overlay Pass, Uniform 'dataBuffer' not found!

I can reproduce the bug on 27cccaeccd2 with --threads 1 option. But It can not reproduce with --debug option. Then terminal displays following errors in edit mode. Pass : Edit Mesh Face Overlay Pass, Uniform 'viewportSize' not found! Pass : Edit Mesh Face Overlay Pass, Uniform 'edgeScale' not found! Pass : Edit Mesh Face Overlay Pass, Uniform 'dataBuffer' not found!

This issue was referenced by 8a92976254

This issue was referenced by 8a92976254f38d1f260e7e23e48e0b6f92c6481c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57653
No description provided.