Fix T57653: Fix T58075: Crash when switching between Edit and Sculpt/Paint modes.

Sculpt (and paint) modes rely on valid evaluated data at their initialization.

Added code to ensure that in `ED_object_mode_toggle()`, when relevant
toggle operator requires it (looks like sculpt/paint should be the only
ones affected, although particle edit may be too...).